[package]
name = "bme280-alt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14"
num_enum = { version = "0.5", default-features = false }
embedded-hal = "0.2.7"
fixed = "2.0.0-alpha.9"
